[gd_scene load_steps=3 format=3 uid="uid://dksdsjk2rcc6h"]

[ext_resource type="Script" path="res://assets/scenes/base_objects/player_hearer/player_hearer.gd" id="1_pegft"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f7obv"]

[node name="PlayerHearer" type="Area2D"]
collision_layer = 0
monitorable = false
script = ExtResource("1_pegft")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f7obv")

[node name="HearTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ObstacleCast" type="RayCast2D" parent="."]
enabled = false
collision_mask = 514

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="HearTimer" to="." method="_on_hear_timer_timeout"]
